src/grammar/src/grammar/NajaScriptParser.cpp

// Generated from src/grammar/NajaScript.g4 by ANTLR 4.13.1


#include "NajaScriptVisitor.h"

#include "NajaScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct NajaScriptParserStaticData final {
  NajaScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  NajaScriptParserStaticData(const NajaScriptParserStaticData&) = delete;
  NajaScriptParserStaticData(NajaScriptParserStaticData&&) = delete;
  NajaScriptParserStaticData& operator=(const NajaScriptParserStaticData&) = delete;
  NajaScriptParserStaticData& operator=(NajaScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag najascriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
NajaScriptParserStaticData *najascriptParserStaticData = nullptr;

void najascriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (najascriptParserStaticData != nullptr) {
    return;
  }
#else
  assert(najascriptParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<NajaScriptParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "block", "variableDeclaration", "type", "printStatement", 
      "inputStatement", "expressionStatement", "expression", "assignmentExpression", 
      "additiveExpression", "multiplicativeExpression", "primaryExpression", 
      "literal"
    },
    std::vector<std::string>{
      "", "';'", "'{'", "'}'", "'='", "'int'", "'float'", "'bool'", "'str'", 
      "'flux'", "'print'", "'('", "')'", "'input'", "", "", "", "", "", 
      "", "", "", "'+'", "'-'", "'*'", "'/'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "IDENTIFIER", 
      "INTEGER", "FLOAT", "STRING", "BOOLEAN", "COMMENT", "BLOCK_COMMENT", 
      "WS", "ADD", "SUB", "MUL", "DIV"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  najascriptParserStaticData = staticData.release();
}

}

NajaScriptParser::NajaScriptParser(TokenStream *input) : NajaScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

NajaScriptParser::NajaScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  NajaScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *najascriptParserStaticData->atn, najascriptParserStaticData->decisionToDFA, najascriptParserStaticData->sharedContextCache, options);
}

NajaScriptParser::~NajaScriptParser() {
  delete _interpreter;
}

const atn::ATN& NajaScriptParser::getATN() const {
  return *najascriptParserStaticData->atn;
}

std::string NajaScriptParser::getGrammarFileName() const {
  return "NajaScript.g4";
}

const std::vector<std::string>& NajaScriptParser::getRuleNames() const {
  return najascriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& NajaScriptParser::getVocabulary() const {
  return najascriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView NajaScriptParser::getSerializedATN() const {
  return najascriptParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

NajaScriptParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NajaScriptParser::ProgramContext::EOF() {
  return getToken(NajaScriptParser::EOF, 0);
}

std::vector<NajaScriptParser::StatementContext *> NajaScriptParser::ProgramContext::statement() {
  return getRuleContexts<NajaScriptParser::StatementContext>();
}

NajaScriptParser::StatementContext* NajaScriptParser::ProgramContext::statement(size_t i) {
  return getRuleContext<NajaScriptParser::StatementContext>(i);
}


size_t NajaScriptParser::ProgramContext::getRuleIndex() const {
  return NajaScriptParser::RuleProgram;
}


std::any NajaScriptParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::ProgramContext* NajaScriptParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, NajaScriptParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 511974) != 0)) {
      setState(28);
      statement();
      setState(33);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(34);
    match(NajaScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

NajaScriptParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NajaScriptParser::VariableDeclarationContext* NajaScriptParser::StatementContext::variableDeclaration() {
  return getRuleContext<NajaScriptParser::VariableDeclarationContext>(0);
}

NajaScriptParser::ExpressionStatementContext* NajaScriptParser::StatementContext::expressionStatement() {
  return getRuleContext<NajaScriptParser::ExpressionStatementContext>(0);
}

NajaScriptParser::PrintStatementContext* NajaScriptParser::StatementContext::printStatement() {
  return getRuleContext<NajaScriptParser::PrintStatementContext>(0);
}

NajaScriptParser::InputStatementContext* NajaScriptParser::StatementContext::inputStatement() {
  return getRuleContext<NajaScriptParser::InputStatementContext>(0);
}

NajaScriptParser::BlockContext* NajaScriptParser::StatementContext::block() {
  return getRuleContext<NajaScriptParser::BlockContext>(0);
}


size_t NajaScriptParser::StatementContext::getRuleIndex() const {
  return NajaScriptParser::RuleStatement;
}


std::any NajaScriptParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::StatementContext* NajaScriptParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, NajaScriptParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(42);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(36);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(37);
      expressionStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(38);
      printStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(39);
      inputStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(40);
      block();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(41);
      match(NajaScriptParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

NajaScriptParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NajaScriptParser::StatementContext *> NajaScriptParser::BlockContext::statement() {
  return getRuleContexts<NajaScriptParser::StatementContext>();
}

NajaScriptParser::StatementContext* NajaScriptParser::BlockContext::statement(size_t i) {
  return getRuleContext<NajaScriptParser::StatementContext>(i);
}


size_t NajaScriptParser::BlockContext::getRuleIndex() const {
  return NajaScriptParser::RuleBlock;
}


std::any NajaScriptParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::BlockContext* NajaScriptParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 4, NajaScriptParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    match(NajaScriptParser::T__1);
    setState(48);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 511974) != 0)) {
      setState(45);
      statement();
      setState(50);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(51);
    match(NajaScriptParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

NajaScriptParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NajaScriptParser::TypeContext* NajaScriptParser::VariableDeclarationContext::type() {
  return getRuleContext<NajaScriptParser::TypeContext>(0);
}

tree::TerminalNode* NajaScriptParser::VariableDeclarationContext::IDENTIFIER() {
  return getToken(NajaScriptParser::IDENTIFIER, 0);
}

NajaScriptParser::ExpressionContext* NajaScriptParser::VariableDeclarationContext::expression() {
  return getRuleContext<NajaScriptParser::ExpressionContext>(0);
}


size_t NajaScriptParser::VariableDeclarationContext::getRuleIndex() const {
  return NajaScriptParser::RuleVariableDeclaration;
}


std::any NajaScriptParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::VariableDeclarationContext* NajaScriptParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, NajaScriptParser::RuleVariableDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    type();
    setState(54);
    match(NajaScriptParser::IDENTIFIER);
    setState(57);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NajaScriptParser::T__3) {
      setState(55);
      match(NajaScriptParser::T__3);
      setState(56);
      expression();
    }
    setState(60);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(59);
      match(NajaScriptParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

NajaScriptParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t NajaScriptParser::TypeContext::getRuleIndex() const {
  return NajaScriptParser::RuleType;
}


std::any NajaScriptParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::TypeContext* NajaScriptParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 8, NajaScriptParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 992) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStatementContext ------------------------------------------------------------------

NajaScriptParser::PrintStatementContext::PrintStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NajaScriptParser::ExpressionContext* NajaScriptParser::PrintStatementContext::expression() {
  return getRuleContext<NajaScriptParser::ExpressionContext>(0);
}


size_t NajaScriptParser::PrintStatementContext::getRuleIndex() const {
  return NajaScriptParser::RulePrintStatement;
}


std::any NajaScriptParser::PrintStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitPrintStatement(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::PrintStatementContext* NajaScriptParser::printStatement() {
  PrintStatementContext *_localctx = _tracker.createInstance<PrintStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, NajaScriptParser::RulePrintStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(NajaScriptParser::T__9);
    setState(65);
    match(NajaScriptParser::T__10);
    setState(66);
    expression();
    setState(67);
    match(NajaScriptParser::T__11);
    setState(69);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(68);
      match(NajaScriptParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputStatementContext ------------------------------------------------------------------

NajaScriptParser::InputStatementContext::InputStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NajaScriptParser::InputStatementContext::IDENTIFIER() {
  return getToken(NajaScriptParser::IDENTIFIER, 0);
}

tree::TerminalNode* NajaScriptParser::InputStatementContext::STRING() {
  return getToken(NajaScriptParser::STRING, 0);
}


size_t NajaScriptParser::InputStatementContext::getRuleIndex() const {
  return NajaScriptParser::RuleInputStatement;
}


std::any NajaScriptParser::InputStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitInputStatement(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::InputStatementContext* NajaScriptParser::inputStatement() {
  InputStatementContext *_localctx = _tracker.createInstance<InputStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, NajaScriptParser::RuleInputStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(NajaScriptParser::IDENTIFIER);
    setState(72);
    match(NajaScriptParser::T__3);
    setState(73);
    match(NajaScriptParser::T__12);
    setState(74);
    match(NajaScriptParser::T__10);
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NajaScriptParser::STRING) {
      setState(75);
      match(NajaScriptParser::STRING);
    }
    setState(78);
    match(NajaScriptParser::T__11);
    setState(80);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(79);
      match(NajaScriptParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

NajaScriptParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NajaScriptParser::ExpressionContext* NajaScriptParser::ExpressionStatementContext::expression() {
  return getRuleContext<NajaScriptParser::ExpressionContext>(0);
}


size_t NajaScriptParser::ExpressionStatementContext::getRuleIndex() const {
  return NajaScriptParser::RuleExpressionStatement;
}


std::any NajaScriptParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::ExpressionStatementContext* NajaScriptParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, NajaScriptParser::RuleExpressionStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    expression();
    setState(84);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(83);
      match(NajaScriptParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

NajaScriptParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NajaScriptParser::AssignmentExpressionContext* NajaScriptParser::ExpressionContext::assignmentExpression() {
  return getRuleContext<NajaScriptParser::AssignmentExpressionContext>(0);
}


size_t NajaScriptParser::ExpressionContext::getRuleIndex() const {
  return NajaScriptParser::RuleExpression;
}


std::any NajaScriptParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::ExpressionContext* NajaScriptParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, NajaScriptParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    assignmentExpression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentExpressionContext ------------------------------------------------------------------

NajaScriptParser::AssignmentExpressionContext::AssignmentExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NajaScriptParser::AdditiveExpressionContext* NajaScriptParser::AssignmentExpressionContext::additiveExpression() {
  return getRuleContext<NajaScriptParser::AdditiveExpressionContext>(0);
}

tree::TerminalNode* NajaScriptParser::AssignmentExpressionContext::IDENTIFIER() {
  return getToken(NajaScriptParser::IDENTIFIER, 0);
}

NajaScriptParser::AssignmentExpressionContext* NajaScriptParser::AssignmentExpressionContext::assignmentExpression() {
  return getRuleContext<NajaScriptParser::AssignmentExpressionContext>(0);
}


size_t NajaScriptParser::AssignmentExpressionContext::getRuleIndex() const {
  return NajaScriptParser::RuleAssignmentExpression;
}


std::any NajaScriptParser::AssignmentExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitAssignmentExpression(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::AssignmentExpressionContext* NajaScriptParser::assignmentExpression() {
  AssignmentExpressionContext *_localctx = _tracker.createInstance<AssignmentExpressionContext>(_ctx, getState());
  enterRule(_localctx, 18, NajaScriptParser::RuleAssignmentExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(88);
      additiveExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(89);
      match(NajaScriptParser::IDENTIFIER);
      setState(90);
      match(NajaScriptParser::T__3);
      setState(91);
      assignmentExpression();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AdditiveExpressionContext ------------------------------------------------------------------

NajaScriptParser::AdditiveExpressionContext::AdditiveExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NajaScriptParser::MultiplicativeExpressionContext *> NajaScriptParser::AdditiveExpressionContext::multiplicativeExpression() {
  return getRuleContexts<NajaScriptParser::MultiplicativeExpressionContext>();
}

NajaScriptParser::MultiplicativeExpressionContext* NajaScriptParser::AdditiveExpressionContext::multiplicativeExpression(size_t i) {
  return getRuleContext<NajaScriptParser::MultiplicativeExpressionContext>(i);
}

std::vector<tree::TerminalNode *> NajaScriptParser::AdditiveExpressionContext::ADD() {
  return getTokens(NajaScriptParser::ADD);
}

tree::TerminalNode* NajaScriptParser::AdditiveExpressionContext::ADD(size_t i) {
  return getToken(NajaScriptParser::ADD, i);
}

std::vector<tree::TerminalNode *> NajaScriptParser::AdditiveExpressionContext::SUB() {
  return getTokens(NajaScriptParser::SUB);
}

tree::TerminalNode* NajaScriptParser::AdditiveExpressionContext::SUB(size_t i) {
  return getToken(NajaScriptParser::SUB, i);
}


size_t NajaScriptParser::AdditiveExpressionContext::getRuleIndex() const {
  return NajaScriptParser::RuleAdditiveExpression;
}


std::any NajaScriptParser::AdditiveExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitAdditiveExpression(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::AdditiveExpressionContext* NajaScriptParser::additiveExpression() {
  AdditiveExpressionContext *_localctx = _tracker.createInstance<AdditiveExpressionContext>(_ctx, getState());
  enterRule(_localctx, 20, NajaScriptParser::RuleAdditiveExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(94);
      multiplicativeExpression();
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == NajaScriptParser::ADD) {
        setState(95);
        match(NajaScriptParser::ADD);
        setState(96);
        multiplicativeExpression();
        setState(101);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(102);
      multiplicativeExpression();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == NajaScriptParser::SUB) {
        setState(103);
        match(NajaScriptParser::SUB);
        setState(104);
        multiplicativeExpression();
        setState(109);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultiplicativeExpressionContext ------------------------------------------------------------------

NajaScriptParser::MultiplicativeExpressionContext::MultiplicativeExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NajaScriptParser::PrimaryExpressionContext *> NajaScriptParser::MultiplicativeExpressionContext::primaryExpression() {
  return getRuleContexts<NajaScriptParser::PrimaryExpressionContext>();
}

NajaScriptParser::PrimaryExpressionContext* NajaScriptParser::MultiplicativeExpressionContext::primaryExpression(size_t i) {
  return getRuleContext<NajaScriptParser::PrimaryExpressionContext>(i);
}

std::vector<tree::TerminalNode *> NajaScriptParser::MultiplicativeExpressionContext::MUL() {
  return getTokens(NajaScriptParser::MUL);
}

tree::TerminalNode* NajaScriptParser::MultiplicativeExpressionContext::MUL(size_t i) {
  return getToken(NajaScriptParser::MUL, i);
}

std::vector<tree::TerminalNode *> NajaScriptParser::MultiplicativeExpressionContext::DIV() {
  return getTokens(NajaScriptParser::DIV);
}

tree::TerminalNode* NajaScriptParser::MultiplicativeExpressionContext::DIV(size_t i) {
  return getToken(NajaScriptParser::DIV, i);
}


size_t NajaScriptParser::MultiplicativeExpressionContext::getRuleIndex() const {
  return NajaScriptParser::RuleMultiplicativeExpression;
}


std::any NajaScriptParser::MultiplicativeExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NajaScriptVisitor*>(visitor))
    return parserVisitor->visitMultiplicativeExpression(this);
  else
    return visitor->visitChildren(this);
}

NajaScriptParser::MultiplicativeExpressionContext* NajaScriptParser::multiplicativeExpression() {
  MultiplicativeExpressionContext *_localctx = _tracker.createInstance<MultiplicativeExpressionContext>(_ctx, getState());
  enterRule(_localctx, 22, NajaScriptParser::RuleMultiplicativeExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(128);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(112);
      primaryExpression();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == NajaScriptParser::MUL) {
        setState(113);
        match(NajaScriptParser::MUL);
        setState(114);
        primaryExpression();
        setState(119);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(120);
      primaryExpression();
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == NajaScriptParser::DIV) {
        setState(121);
        match(NajaScriptParser::DIV);
        setState(122);
        primaryExpression();
        setState(127);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }
